--- a/als-serving/src/main/jspx/test-als.jspx
+++ b/als-serving/src/main/jspx/test-als.jspx
@@ -95,7 +95,15 @@
     <td colspan="2"/>
     <td><a href="#" class="arrow" onclick="return doQuery('mostPopularItems',true)">&amp;#x27AC;</a></td></tr>
 </form>
-  
+
+  <tr><td colspan="4"><hr/></td></tr>
+
+<form action="#" style="padding:10px">
+  <tr><td><code>/popularRepresentativeItems</code></td>
+    <td colspan="2"/>
+    <td><a href="#" class="arrow" onclick="return doQuery('popularRepresentativeItems',true)">&amp;#x27AC;</a></td></tr>
+</form>
+
   <tr><td colspan="4"><hr/></td></tr>
 
   <jsp:scriptlet>
