--- a/als-serving/src/main/jspx/test-als.jspx
+++ b/als-serving/src/main/jspx/test-als.jspx
@@ -125,6 +125,22 @@
     <tr><td colspan="4"><hr/></td></tr>
 
 <form action="#" style="padding:10px">
+  <tr><td><code>/user/allIDs</code></td>
+    <td colspan="2"/>
+    <td><a href="#" class="arrow" onclick="return doQuery('user/allIDs',true)">&amp;#x27AC;</a></td></tr>
+</form>
+
+    <tr><td colspan="4"><hr/></td></tr>
+
+<form action="#" style="padding:10px">
+  <tr><td><code>/user/mostActiveIDs</code></td>
+    <td colspan="2"/>
+    <td><a href="#" class="arrow" onclick="return doQuery('user/mostActiveIDs',true)">&amp;#x27AC;</a></td></tr>
+</form>
+
+  <tr><td colspan="4"><hr/></td></tr>
+
+<form action="#" style="padding:10px">
     <tr><td></td><td>&amp;nbsp;&amp;nbsp;User ID</td><td colspan="2"></td></tr>
     <tr><td><code>/knownItems</code></td>
         <td><code>/</code><input type="text" id="knownItems-userid" onkeyup="return handleReturn(event, 'knownItems',true,['userid'])"/></td>
