--- a/als-serving/src/main/jspx/test-als.jspx
+++ b/als-serving/src/main/jspx/test-als.jspx
@@ -109,6 +109,14 @@
   <tr><td colspan="4"><hr/></td></tr>
 
 <form action="#" style="padding:10px">
+  <tr><td><code>/mostActiveUsers</code></td>
+    <td colspan="2"/>
+    <td><a href="#" class="arrow" onclick="return doQuery('mostActiveUsers',true)">&amp;#x27AC;</a></td></tr>
+</form>
+
+  <tr><td colspan="4"><hr/></td></tr>
+
+<form action="#" style="padding:10px">
   <tr><td><code>/popularRepresentativeItems</code></td>
     <td colspan="2"/>
     <td><a href="#" class="arrow" onclick="return doQuery('popularRepresentativeItems',true)">&amp;#x27AC;</a></td></tr>
@@ -131,14 +139,6 @@
 </form>
 
     <tr><td colspan="4"><hr/></td></tr>
-
-<form action="#" style="padding:10px">
-  <tr><td><code>/user/mostActiveIDs</code></td>
-    <td colspan="2"/>
-    <td><a href="#" class="arrow" onclick="return doQuery('user/mostActiveIDs',true)">&amp;#x27AC;</a></td></tr>
-</form>
-
-  <tr><td colspan="4"><hr/></td></tr>
 
 <form action="#" style="padding:10px">
     <tr><td></td><td>&amp;nbsp;&amp;nbsp;User ID</td><td colspan="2"></td></tr>
